--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -28,8 +28,9 @@
     <!-- Add your extensions here -->
     <fileTypeFactory implementation="com.quokka_script.QuokkaFileTypeFactory"/>
     <lang.parserDefinition language="Quokka Script" implementationClass="com.quokka_script.QuokkaParserDefinition"/>
-    <lang.syntaxHighlighterFactory language="Quokka Script" implementationClass="com.quokka_script.QuokkaSyntaxHighlighterFactory"/>
-    <colorSettingsPage implementation="com.quokka_script.QuokkaColorSettingsPage"/>-->
+    <!--  <lang.syntaxHighlighterFactory language="Quokka Script" implementationClass="com.quokka_script.QuokkaSyntaxHighlighterFactory"/>
+     <colorSettingsPage implementation="com.quokka_script.QuokkaColorSettingsPage"/>
+     -->
     <codeStyleSettingsProvider implementation="com.quokka_script.QuokkaCodeStyleSettingsProvider"/>
     <langCodeStyleSettingsProvider implementation="com.quokka_script.QuokkaLanguageCodeStyleSettingsProvider"/>
 
